--- a/BigNews/index.html
+++ b/BigNews/index.html
@@ -227,12 +227,134 @@
     <script src="./js/template-web.js"></script>
     <!-- 引入jq文件 -->
     <script src="./js/jquery-1.12.4.min.js"></script>
+    <!-- 1.首页焦点图 -->
+    <script id="focus_list" type="text/html">
+    {{each data v}}
+    {{if $index==0}}
+    <li class="first">
+    {{else}}
+    <li>
+    {{/if}}
+        <a href="./article.html?id={{v.id}}"><img src="{{v.cover}}" alt=""></a>
+        <p>{{v.title}}</p>
+    </li>
+    {{/each}}
+    </script>
+    <!-- 2.文章类型 -->
+    <script id="level_two" type="text/html">
+        <li class="up"></li>
+        {{each data v}}
+        <li><a href="./list.html?id={{v.id}}">{{v.name}}</a></li>
+        {{/each}}
+    </script>
+    <!-- 3.最新资讯 -->
+    <script id="common_news" type="text/html">
+    {{each data v}}
+    <div class="common_news_list">
+        <a href="./aticle.html?id={{v.id}}" class="list_pic"><img src="{{v.cover}}" alt=""></a>
+        <h4><a href="./aticle.html?id={{v.id}}">{{v.title}}</a></h4>
+        <p>{{@ v.intro}}
+        </p>
+        <div class="new_info">
+            <span>标签：{{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<i class="fa fa-eye"></i>&nbsp;阅读({{v.read}})&nbsp;&nbsp;&nbsp;<i class="fa fa-commenting"></i>&nbsp;评论({{v.comments}})</span>
+            <b>发布于 {{v.date}}</b>
+        </div>
+    </div>
+    {{/each}}
+    </script>
+    <!-- 4.热门排行榜 -->
+    <script id="common_wrap1" type="text/html">
+        {{each data v}}
+        <li>
+        {{if $index==0}}
+        <span class="first">{{$index+1}}
+        {{else if $index==1}}
+        <span class="second">{{$index+1}}
+        {{else if $index==2}}
+        <span class="third">{{$index+1}}
+        {{else}}
+        <span>{{$index+1}}
+        {{/if}}
+        </span><a href="./article.html?id={{v.id}}">{{v.title}}</a></li>
+        {{/each}}
+    </script>
+    <!-- 5.最新评论 -->
+    <script id="common_wrap2" type="text/html">
+        {{each data v}}
+            <li>
+                <span>{{v.author[0]}}</span>
+                <b><em>{{v.author }}</em> {{v.date}} 说:</b>
+                <strong>{{v.intro}}</strong>
+            </li>
+        {{/each}}
+    </script>
+    <!-- 6.焦点关注 -->
+    <script id="common_wrap3" type="text/html">
+        {{each data v}}
+            <li><a href="javascript:;">{{v.intro}}</a></li>
+        {{/each}}
+    </script>
     <script>
         // 1.首页焦点图
-
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/hotpic',
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                // console.log(backData);
+                $('.focus_list').html(template('focus_list', backData))
+            }
+        });
         // 2.文章类型
-
-        // 3.
+        $.ajax({
+            url: 'http://localhost:8080/api/v1/index/category',
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                // console.log(backData);
+                $('.level_two').html(template('level_two', backData))
+            }
+        });
+        // 3.最新资讯
+        $.ajax({
+            url:'http://localhost:8080/api/v1/index/latest',
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                // console.log(backData);
+                $('.common_news').html(template('common_news',backData))
+            }
+        });
+        // 4.热门排行榜
+        $.ajax({
+            url:'http://localhost:8080/api/v1/index/rank',
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                // console.log(backData);
+                $('.common_wrap:eq(0)>ul').html(template('common_wrap1',backData))
+            }
+        });
+        // 5.最新评论
+        $.ajax({
+            url:'http://localhost:8080/api/v1/index/latest_comment',
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                // console.log(backData);
+                $('.common_wrap:eq(1)>ul').html(template('common_wrap2',backData))
+            }
+        });
+        // 6.焦点关注
+        $.ajax({
+            url:'http://localhost:8080/api/v1/index/attention',
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                console.log(backData);
+                $('.common_wrap:eq(2)>ul').html(template('common_wrap3',backData))
+            }
+        });
     </script>
 </body>
 
